opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-warp10"
bug-reports: "https://github.com/vbmithr/ocaml-warp10/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-warp10"
doc: "https://vbmithr.github.io/ocaml-warp10/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "warp10" {= version}
  "core" {>= "v0.13.0"}
  "async" {>= "v0.13.0"}
  "fastrest" {= version}
  "logs-async" {= version}
  "alcotest-async" {with-test & >= "1.0.0"}
]
synopsis: "Write in a Warp10 database using Async"
description: """
"""
