opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-warp10"
bug-reports: "https://github.com/vbmithr/ocaml-warp10/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-warp10"
doc: "https://vbmithr.github.io/ocaml-warp10/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "uri" {>= "3.1.0"}
  "ptime" {>= "0.8.5"}
]
synopsis: "Types for Warp10 time series database"
description: """
"""
